fixes overflow boxshadow on sidenav

--- a/src/Components/SideNav/sidenav.module.css
+++ b/src/Components/SideNav/sidenav.module.css
@@ -19,6 +19,7 @@
   width: 3rem;
   height: 100vh;
   background-color: var(--sidenav-color);
+  z-index: 400;
 }
 
 .scroll {
